add participant task collection and charge request function

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -381,8 +381,11 @@ en:
     request_recyling: "Request Point Recyling"
     charged_at: "Charged time"
     transaction_id: "Transaction ID"
+    pay_type: "Pay Type"
+    name: "Name"
     success: "Request has been post"
     error: "Some problem happens"
+    exist_tid: "Don not repeat filld the request"
     approve_charge: "Approve Charge"
     request: "Request"
     approve: "Approve"
@@ -604,8 +607,12 @@ en:
         tid: "Transaction ID"
         amount: "Amount"
         bank: "Bank"
+        pay_type: "Pay Type"
         trade_time: "Trade Time"
         description: "Description"
+        account_name: "Account Name"
+        account_id: "Account ID"
+        point: "Point"
     hints:
       task:
         title: "Write a title for you task."
