--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -385,8 +385,14 @@ zh:
     request_recyling: "发布点回收申请"
     charged_at: "充值时间"
     transaction_id: "充值交易单号"
+    name: "付款人"
+    pay_type: "付款方式"
+    zfb: "支付宝"
+    cft: "财付通"
+    wy: "网银"
     success: "交易己提交"
     error: "交易无法进行,交易数量必须大于0"
+    exist_tid: "不要重复填写交易单号"
     approve_charge: "批准充值"
     request: "申请"
     approve: "批准"
@@ -627,6 +633,7 @@ zh:
         tid: "交易单号"
         amount: "金额"
         bank: "转账银行"
+        pay_type: "付款方式"
         trade_time: "入账时间"
         description: "备注"
         account_name: "付款人平台帐号"
