--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -149,7 +149,7 @@ zh:
     new_user: "新加入平台用户"
     finance_center: "财务中心"
     sales_business: "业务申报"
-    task_num: "发布"
+    task_num: "待接"
     todo_num: "接手"
     month_title_task: "本月发布任务数"
     week_title_task: "本周发布任务数"
@@ -313,6 +313,7 @@ zh:
   task:
     confirm: "确认"
     do: "接手任务"
+    price: "改价"
     pay: "付款"
     transport: "发货"
     finish: "完成任务"
@@ -341,6 +342,7 @@ zh:
     send_problem: "投诉"
     problem: "问题处理中"
     running: "执行中"
+    pricing: "己改价"
     end: "己结束"
     total_task: "发布任务总数"
     total_todo: "接手任务总数"
@@ -498,12 +500,16 @@ zh:
     administrator: "客服经理"
 
   message:
+    read: "己读"
+    unread: "未读"
     make_read: "己读"
     make_unread: "未读"
-    message_tail: "条消息"
+    message_tail: "消息"
     total_message: "有%{total}条新的消息,请注意查看"
     task_takeover: "任务 %{task} 己被接手,请关注"
     task_takeover_content: "任务 %{task} 己被接手,<a href='/tasks/%{link}'>任务链接</a>"
+    task_pricing: "任务 %{task} 己改价,请关注"
+    task_pricing_content: "任务 %{task} 己改价,<a href='/tasks/%{link}'>任务链接</a>"
     task_pay: "任务 %{task} 己付款,请关注"
     task_pay_content: "任务 %{task} 己付款,<a href='/tasks/%{link}'>任务链接</a>"
     task_transport: "任务 %{task} 己发货,请关注"
