--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -51,7 +51,9 @@ zh:
     from: "从"
     to: "到"
     submit: "提交"
-    
+    export: "导出"
+    total: "总计"
+
   system:
     password_error: "密码错误"
     login_success: "登录成功"
@@ -89,6 +91,7 @@ zh:
     profile: "帐户"
     login_name: "用户名"
     password: "密码"
+    personal_info: "个人信息"
     change_password: "修改密码"
     password_confirmation: "确认密码"
     current_password: "当前密码"
