--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -370,9 +370,14 @@ zh:
     virtual_task: "虚拟任务"
     virtual: "虚拟"
     spend: "若设置, 扣%{point}发布点"
-    demo: "完整任务流程演示"
+    demo: "点击查看完整任务流程演示及说明 <<<<<<"
     check_store: "请检查帐户余额或发布点是否充足"
     finish_left: "(%{day}天)"
+    p1: "1. 发布任务成功，等待接手方接手任务。"
+    p2: "2. 接手方接了您的任务之后，如果您淘宝上商品的价格+运费和平台上的担保金不一致，您需要在淘宝上修改价格，然后回到平台上点击 改价（图标 ）；价格一致则直接点改价。"
+    p3: "3. 修改好价格之后，接手方会在淘宝上付款，您在淘宝上发货（不是真的发货），并填写发货信息，然后回到平台上点 发货（图标）务必操作！（平台会以这个时间开始计算完成任务的时间）"
+    p4: "4. 您发货之后，接手方会在您规定的时间天数确认收货并好评，对方确认和好评之后，您也需要在淘宝上给予回评。"
+    p5: "5. 在淘宝上完成交易，您一定要及时回到平台上点击 确认（图标），只有您点击后，接手方才能在平台上得到担保金和发布点），并在平台上给发布方给予打分。"
 
   transport:
     unused: "未使用"
@@ -507,7 +512,7 @@ zh:
     unread: "未读"
     make_read: "己读"
     make_unread: "未读"
-    message_tail: "消息"
+    message_tail: "条新消息"
     total_message: "有%{total}条新的消息,请注意查看"
     task_takeover: "任务 %{task} 己被接手,请关注"
     task_takeover_content: "任务 %{task} 己被接手,<a href='/tasks/%{link}'>任务链接</a>"
