--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -370,7 +370,7 @@ zh:
     virtual_task: "虚拟任务"
     virtual: "虚拟"
     spend: "若设置, 扣%{point}发布点"
-    demo: "点击查看完整任务流程演示及说明 <<<<<<"
+    demo: "点击查看完整任务流程演示及说明 <<<<<< 收发任务前必看!!"
     check_store: "请检查帐户余额或发布点是否充足"
     finish_left: "(%{day}天)"
     p1: "1. 发布任务成功，等待接手方接手任务。"
@@ -378,6 +378,7 @@ zh:
     p3: "3. 修改好价格之后，接手方会在淘宝上付款，您在淘宝上发货（不是真的发货），并填写发货信息，然后回到平台上点 发货（图标）务必操作！（平台会以这个时间开始计算完成任务的时间）"
     p4: "4. 您发货之后，接手方会在您规定的时间天数确认收货并好评，对方确认和好评之后，您也需要在淘宝上给予回评。"
     p5: "5. 在淘宝上完成交易，您一定要及时回到平台上点击 确认（图标），只有您点击后，接手方才能在平台上得到担保金和发布点），并在平台上给发布方给予打分。"
+    p6: ">>>>>>>>>>>>  务必按此流程一步步操作,不许漏步骤! 违者后果自负!  <<<<<<<<<<<<<"
 
   transport:
     unused: "未使用"
