--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -319,6 +319,13 @@ zh:
     make_active: "设为当前帐号"
 
   task:
+    q_do: "确认接手任务?"
+    q_price: "确认己改价?"
+    q_pay: "确认己付款?"
+    q_transport: "确认己发货?"
+    q_finish: "确认己完成?"
+    q_confirm: "确认该任务己完成?如确认,货款会转入接手人账户"
+    q_argue: "确认向客服投诉?"
     confirm: "确认"
     do: "接手任务"
     price: "改价"
@@ -432,6 +439,7 @@ zh:
     charge: "充值"
     point: "发布点兑换"
     record: "入账"
+    point_penalty: "发布点处罚"
     recyling_point: "发布点回收"
     out_point: "操作失败,不能小于最低兑换发布点或超出发布点数量"
     score_point: "积分兑换"
@@ -489,17 +497,18 @@ zh:
     source_user: "任务发布者"
     source_worker: "任务执行者"
     penalty: "处罚"
-    extra_penalty: "额外处罚"
+    extra_penalty: "额外处罚扣点"
     close_issue: "关闭问题"
     fixed_issue: "解决问题"
     has_fixed: "问题己解决"
     has_close: "问题己关闭"
-    return_point: "恢复发布点给任务发布者"
+    return_point: "恢复发布点给任务发布者, 不选则货款和发布点划给接任务方"
     can_not_modify: "问题己无法修改"
     memo: "解决结果"
     penalty_money: "罚金"
     target: "关联对象"
     issue_person: "被投诉人"
+    task_issue_error: "任务投诉不能被关闭"
     
   notice:
     new_notice: "发表公告"
