update task do condition fee

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -683,7 +683,7 @@ zh:
         worker_level: "接任务人在平台中的级别,不选则任何级别的平台用户都可见"
         real_level: "指定接任务人小号的级别"
         task_day: "多少天完成给评价"
-        avoid_day: "设置多少天内同一买家不能接受任务"
+        avoid_day: "设置多少天内同一买家不能接受任务,本项设置为额外服务,平台本身己对安全交易有限制"
         extra_word: "不选则是默认不带字好评"
         custom_judge: ""
         custom_judge_content: "要求接任务的买家在评价中填写的内容,必须选中自定义评价此项才有效,可以不填让买家自己写评价"
