update user right bug

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -289,8 +289,11 @@ en:
     confirm: "confirm"
     not_confirmed: "UnConfirmed"
     not_approved: "Not Approved"
+    charge_log: "Charge Log"
     trade_log: "Trade Log"
     task_log: "Task Log"
+    small_cash_log: "Small Cash Log"
+    big_cash_log: "Big Cash Log"
     level: "Level"
     operate_password: "Operate Password"
     operate_password_desc: "Not required if not set."
