--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -291,8 +291,11 @@ zh:
     confirm: "激活"
     not_confirmed: "未激活"
     not_approved: "未认证"
+    charge_log: "充值记录"
     trade_log: "帐户记录"
     task_log: "任务记录"
+    small_cash_log: "小额提现记录"
+    big_cash_log: "大额提现记录"
     level: "级别"
     operate_password: "操作密码"
     operate_password_desc: "如果没有设置可不填,密码不正确无法发布任务"
