fixed operation code input not display in ie

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -387,7 +387,7 @@ zh:
     virtual: "虚拟"
     spend: "若设置, 扣%{point}发布点"
     demo: "点击查看完整任务流程演示及说明 <<<<<< 收发任务前必看!!"
-    check_store: "请检查帐户余额或发布点是否充足"
+    check_store: "请检查帐户余额或发布点是否充足, 或者操作码是否正确"
     finish_left: "(%{day}天)"
     p1: "1. 发布任务成功，等待接手方接手任务。"
     p2: "2. 接手方接了您的任务之后，如果您淘宝上商品的价格+运费和平台上的担保金不一致，您需要在淘宝上修改价格，然后回到平台上点击 改价（图标 ）；价格一致则直接点改价。"
