--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -64,6 +64,8 @@ zh:
     unread_message: "末读消息"
 
   site:
+    previous: "&#8592;前页"
+    next: "后页&#8594;"
     ie: "您的IE浏览器版本太老,可能会影响浏览效果"
     name: "同舟共济"
     copyright: "版权所有"
