--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -288,6 +288,7 @@ zh:
     account_money: "帐户余额"
     point: "发布点"
     gain_point: "得到发布点"
+    restore_point: "恢复发布点"
     role: "角色"
     score: "积分"
     confirm: "激活"
@@ -507,13 +508,16 @@ zh:
     fixed_issue: "解决问题"
     has_fixed: "问题己解决"
     has_close: "问题己关闭"
-    return_point: "恢复发布点给任务发布者, 不选则货款和发布点划给接任务方"
+    return_point: "恢复发布点和保证金给任务发布者, 不选则划给接任务方"
     can_not_modify: "问题己无法修改"
     memo: "解决结果"
     penalty_money: "罚金"
     target: "关联对象"
     issue_person: "被投诉人"
     task_issue_error: "任务投诉不能被关闭"
+    task_source: "过错方为 %{source} "
+    point_to_owner: "恢复发布点与保证金给发布者"
+    point_to_worker: "恢复发布点与保证金给接任务者"
     
   notice:
     new_notice: "发表公告"
