update css style

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -338,6 +338,11 @@ zh:
     pay: "付款"
     transport: "发货"
     finish: "完成任务"
+    w_price: "待改价"
+    w_cash: "待付款"
+    w_transport: "待发货"
+    w_finish: "待完成"
+    w_end: "待确认"
     condition: "任务条件"
     owner: "发布者"
     worker: "接手人"
