--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -698,7 +698,7 @@ zh:
         description: "为任务写一些描述性的文字,可以不写"
         worker_level: "接任务人在平台中的级别,不选则任何级别的平台用户都可见"
         real_level: "指定接任务人小号的级别"
-        task_day: "多少天完成给评价"
+        task_day: "多少天完成给评价,选择完成天数最好为两天或以上,如果选择一天收货,后果自负!!! (时间越长,操作越安全!!!)"
         avoid_day: "设置多少天内同一买家不能接受任务,本项设置为额外服务,平台本身己对安全交易有限制"
         extra_word: "不选则是默认不带字好评"
         custom_judge: ""
