--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -403,6 +403,7 @@ zh:
     p4: "4. 您发货之后，接手方会在您规定的时间天数确认收货并好评，对方确认和好评之后，您也需要在淘宝上给予回评。"
     p5: "5. 在淘宝上完成交易，您一定要及时回到平台上点击 确认（图标），只有您点击后，接手方才能在平台上得到担保金和发布点），并在平台上给发布方给予打分。"
     p6: ">>>>>>>>>>>>  务必按此流程一步步操作,不许漏步骤! 违者后果自负!  <<<<<<<<<<<<<"
+    taskday_hint: "发布实物选择完成天数最好为两三天或以上,如果选择一天收货,后果自负!!! (时间越长,操作越安全!!!)"
 
   transport:
     unused: "未使用"
@@ -698,7 +699,7 @@ zh:
         description: "为任务写一些描述性的文字,可以不写"
         worker_level: "接任务人在平台中的级别,不选则任何级别的平台用户都可见"
         real_level: "指定接任务人小号的级别"
-        task_day: "多少天完成给评价,选择完成天数最好为两天或以上,如果选择一天收货,后果自负!!! (时间越长,操作越安全!!!)"
+        task_day: "多少天完成给评价,卖家发货后间隔的收货确认天数"
         avoid_day: "设置多少天内同一买家不能接受任务,本项设置为额外服务,平台本身己对安全交易有限制"
         extra_word: "不选则是默认不带字好评"
         custom_judge: ""
