add new task conditions, update task table style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -462,6 +462,8 @@ en:
     report_punish: "Report Punish"
     extra_word: "Extra Word"
     custom_judge: "Custom Judge Point"
+    custom_msg: "Custom Message"
+    all_star: "Five Star"
     real_level: "Worker Real Account Level"
     init_required_point: "Require Point"
     init_gift_point: "Gift Point"
@@ -569,8 +571,11 @@ en:
         extra_word: "Extra Words"
         avoid_day: "Avoid Days"
         task_level: "Task Level"
+        all_star: "Five star"
         custom_judge: "Custom Judge"
         custom_judge_content: "Custom Judge Content"
+        custom_msg: "Custom message"
+        custom_msg_content: "Custom message content"
         tran_type: "Transport Company"
         tran_id: "Transportation ID"
         published_time: "Published Time"
@@ -657,8 +662,12 @@ en:
         real_level: ""
         task_day: ""
         avoid_day: "Set the day which same buyer can not buy the task"
+        task_level: ""
+        all_star: "Five star"
         custom_judge: ""
         custom_judge_content: ""
+        custom_msg: "Custom message"
+        custom_msg_content: "Custom message content"
         transport_id: "If not given, System will provide an ID for you"
         shop: ""
         virtual: "If Choosen, Publish Virtual Task"
