--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -486,6 +486,8 @@ zh:
     report_punish: "举报处罚"
     extra_word: "附加词语消耗点数"
     custom_judge: "自定义评价消耗点数"
+    custom_msg: "客户留言消耗点数"
+    all_star: "五星评价消耗点数"
     real_level: "接任务方帐号真实级别"
     init_required_point: "初始扣除发布点数"
     init_gift_point: "初始赠送发布点数"
@@ -612,8 +614,11 @@ zh:
         extra_word: "是否带字好评"
         avoid_day: "重复天数"
         task_level: "任务级别"
+        all_star: "用户5星评价"
         custom_judge: "自定义评价"
         custom_judge_content: "自定义评价内容"
+        custom_msg: "自定义用户留言"
+        custom_msg_content: "自定义留言内容"
         tran_type: "物流"
         tran_id: "物流单号"
         published_time: "发布时间"
@@ -702,8 +707,11 @@ zh:
         task_day: "多少天完成给评价,卖家发货后间隔的收货确认天数"
         avoid_day: "设置多少天内同一买家不能接受任务,本项设置为额外服务,平台本身己对安全交易有限制"
         extra_word: "不选则是默认不带字好评"
+        all_star: "设置后,买家必须全5星评价,不设置则买家随意打分"
         custom_judge: ""
         custom_judge_content: "要求接任务的买家在评价中填写的内容,必须选中自定义评价此项才有效,可以不填让买家自己写评价"
+        custom_msg: "自定义用户在留言栏中的内容,如商品的颜色尺寸等,增加可信度"
+        custom_msg_content: ""
         transport_id: "如果不填系统自动生成一个单号"
         shop: "店铺名称,必须和绑定的店铺对应"
         virtual: "选中则发布为虚拟任务"
