add link button style

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -378,7 +378,8 @@ en:
     spend: "Spend %{point} point"
     demo: "Demo"
     check_store: "Please check if you have enough money and point"
-    finish_left: "(%{day} day)"
+    finish_left: "(%{day} days)"
+    overdue: "Overdue %{day} days"
     p1: ""
     p2: ""
     p3: ""
