--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -348,7 +348,7 @@ zh:
     worker: "接手人"
     requirement: "任务要求"
     level: "任务等级"
-    work_day: "任务期限"
+    work_day: "完成期限"
     extra: "额外评价"
     unpublish: "未发布"
     publish: "发布"
@@ -396,7 +396,8 @@ zh:
     spend: "若设置, 扣%{point}发布点"
     demo: "点击查看完整任务流程演示及说明 <<<<<< 收发任务前必看!!"
     check_store: "请检查帐户余额或发布点是否充足, 或者操作码是否正确"
-    finish_left: "(%{day}天)"
+    finish_left: "(剩%{day}天)"
+    overdue: "超期%{day}天"
     p1: "1. 发布任务成功，等待接手方接手任务。"
     p2: "2. 接手方接了您的任务之后，如果您淘宝上商品的价格+运费和平台上的担保金不一致，您需要在淘宝上修改价格，然后回到平台上点击 改价（图标 ）；价格一致则直接点改价。"
     p3: "3. 修改好价格之后，接手方会在淘宝上付款，您在淘宝上发货（不是真的发货），并填写发货信息，然后回到平台上点 发货（图标）务必操作！（平台会以这个时间开始计算完成任务的时间）"
@@ -612,7 +613,7 @@ zh:
         real_level: "真实信用级别(买家信用级别)"
         task_day: "完成时间"
         extra_word: "是否带字好评"
-        avoid_day: "重复天数"
+        avoid_day: "用户任务间隔天数"
         task_level: "任务级别"
         all_star: "用户5星评价"
         custom_judge: "自定义评价"
