user and participant name can support chinese and can not have space in name registration

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -732,7 +732,7 @@ zh:
         im: "任何聊天工具的帐号都可填在这里"
         operate_password: "不超过20位"
       participant:
-        part_id: "绑定店铺填写掌柜名, 绑定买号填写旺旺(拍拍、有啊)小号名"
+        part_id: "绑定店铺填写掌柜名, 绑定买号填写旺旺(拍拍、有啊)小号名, 名字只能包含中文、字母、数字和下划线"
         url: "若绑定店铺, 则此项必须填写"
     actions:
       create: "创建"
