change public notice style in first page

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -122,6 +122,7 @@ en:
     new_task: "Put a Task"
     user_center: "User Center"
     rule: "Rule"
+    wiki: "Wiki"
     my_task: "My tasks"
     my_todo: "My todos"
     my_cash: "My Cash Task"
