--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -124,6 +124,7 @@ zh:
     new_task: "发布任务"
     user_center: "用户中心"
     rule: "平台规则"
+    wiki: "平台百科"
     my_task: "我发布的任务"
     my_todo: "我接手的任务"
     my_cash: "我的提现任务"
@@ -137,7 +138,7 @@ zh:
     accountlog_center: "帐户日志"
     setting: "平台设置"
     manage_center: "管理中心"
-    notice: "公告"
+    notice: "平台公告"
     notice_center: "公告中心"
     user_manage: "用户管理"
     cash_task: "提现处理"
