add simple display style

--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -139,7 +139,7 @@ zh:
     setting: "平台设置"
     manage_center: "管理中心"
     notice: "平台公告"
-    notice_center: "公告中心"
+    notice_center: "公告"
     user_manage: "用户管理"
     cash_task: "提现处理"
     big_cash: "大额提现"
