--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -132,7 +132,7 @@ zh:
     my_account: "我的帐户"
     my_transport: "我的运单号"
     my_messages: "我的消息"
-    my_participants: "用户帐号"
+    my_participants: "用户小号"
     issue: "问题中心"
     tasklog_center: "任务日志"
     accountlog_center: "帐户日志"
