--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -70,7 +70,7 @@ zh:
     user_not_exist: "用户不存在"
     previous: "&#8592;前页"
     next: "后页&#8594;"
-    ie: "您的IE浏览器版本太老,可能会影响浏览效果"
+    ie: "您的IE浏览器版本太老,可能会影响浏览效果,建议升级到ie7以上版本,或者使用火狐及谷歌浏览器"
     name: "同舟共济"
     copyright: "版权所有"
     admin: "后台"
