--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -425,6 +425,7 @@ zh:
     p5: "5. 在淘宝上完成交易，您一定要及时回到平台上点击 确认（图标），只有您点击后，接手方才能在平台上得到担保金和发布点），并在平台上给发布方给予打分。"
     p6: ">>>>>>>>>>>>  务必按此流程一步步操作,不许漏步骤! 违者后果自负!  <<<<<<<<<<<<<"
     taskday_hint: "发布实物选择完成天数最好为两三天或以上,如果选择一天收货,后果自负!!! (时间越长,操作越安全!!!)"
+    click_icon: "<<点击数量跳转到相关任务"
 
   transport:
     unused: "未使用"
