--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -97,6 +97,7 @@ en:
     welcome: "Welcome, %{name}"
     login: "Login"
     register: "Register"
+    join_us: "Join us | Register"
     register_agree: "Register and Agree Service Contract"
     logout: "Logout"
     profile: "Profile"
@@ -174,6 +175,21 @@ en:
     w_task_sum: "Current Week Task Price"
     m_trade_sum: "Current Month Trade Price"
     w_trade_sum: "Current Week Trade Price"
+    intro_title: ""
+    intro: ""
+    intro1: ""
+    intro2: ""
+    adv_title: "Advantage"
+    adv1t: ""
+    adv1: ""
+    adv2t: ""
+    adv2: ""
+    adv3t: ""
+    adv3: ""
+    adv4t: ""
+    adv4: ""
+    adv5t: ""
+    adv5: ""
 
   manage:
     message_box: "Inbox"
