--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -99,6 +99,7 @@ zh:
     welcome: "欢迎, %{name}"
     login: "登录"
     register: "注册"
+    join_us: "加入我们 | 注册"
     register_agree: "注册并同意同舟服务协议"
     logout: "注销"
     profile: "帐户"
@@ -180,6 +181,21 @@ zh:
     task_diamond: "钻石区"
     task_favourite: "收藏区"
     task_flow: "流量区"
+    intro_title: "同舟网络"
+    intro: "同舟网络旨在做您事业上的好伙伴，只要您有所呼应，我们必定随叫随到！随时随地尽心为您经营管理网店商务、贸易、买卖活动。为您提供从网上置业定位分析——互联网产品应用等一条龙的管理服务。"
+    intro1: "亲切、开放、严谨的企业文化和科学规范的管理，凝聚着大量的优秀人才，同舟网拥有由优秀的职业经理人组成的管理团队、由资深IT专员组成的技术团队以及最具丰富经验和专业素质的销售精英组成的客服团队，我们在技术开发、推广和维护方面默契合作深刻理解“以客户为先”的含义，将“服务”贯穿于平台运作和管理的每一个细节，赢得客户广泛的信任和支持。"
+    intro2: "高含量的技术支持，高素质的贴心服务，高质量的服务对象，相信我们的合作将会是强强联手！同舟网期待与您互联网事业相呼应，共同扬帆智慧之舟，共同抵达黄金海岸!"
+    adv_title: "平台优势"
+    adv1t: "最专业的团队"
+    adv1: "同舟平台拥有最优秀的管理团队、最资深的技术团队以及最有经验、素质的客服团队。"
+    adv2t: "最严谨的操作"
+    adv2: "同舟平台严格控制交易的拍下、付款、发货、收货评价等真实流程进行操作，真实交易，万无一失！"
+    adv3t: "最贴心的服务"
+    adv3: "平台一直 “以客户为先”为理念，急客户所急，将“服务”贯穿于平台运作和管理的每一个细节。"
+    adv4t: "最强大的技术"
+    adv4: "最资深的淘宝研究团队和技术研发团队保证技术刷钻的安全！"
+    adv5t: "最清新的风格"
+    adv5: "无繁琐步骤，无隐性消费，无恶意操作，同舟力求做到最实在最优异，给您带来不一样的舒适平台！"
 
   manage:
     message_box: "收件箱"
