--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -118,6 +118,7 @@ en:
     cancel_account: "Cancel my account"
     are_you_sure: "Are you sure?"
     news: "News"
+    site_update: "Site Update"
     no_news: "No recently news"
     no_topics: "No recently topic news"
     no_articles: "No recently blog news"
