--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -76,7 +76,7 @@ zh:
     previous: "&#8592;前页"
     next: "后页&#8594;"
     ie: "您的IE浏览器版本太老,可能会影响浏览效果,建议升级到ie7以上版本,或者使用火狐及谷歌浏览器"
-    name: "同舟共济"
+    name: "同舟网络"
     copyright: "版权所有"
     admin: "后台"
     roles: "角色"
@@ -120,6 +120,7 @@ zh:
     cancel_account: "删除我的帐户"
     are_you_sure: "确定此操作?"
     news: "新闻"
+    site_update: "网站更新"
     no_news: "暂无公告"
     no_topics: "没有新的话题"
     no_articles: "没有新的文章"
