--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -75,7 +75,9 @@ zh:
     user_not_exist: "用户不存在"
     previous: "&#8592;前页"
     next: "后页&#8594;"
-    ie: "您的IE浏览器版本太老,可能会影响浏览效果,建议升级到ie7以上版本,或者使用火狐及谷歌浏览器"
+    ie: "您的IE浏览器版本太老,可能会严重影响浏览效果及账户安全,建议升级到ie8以上版本,或者使用火狐及谷歌浏览器"
+    firefox: "Firefox下载"
+    google: "谷歌下载"
     name: "同舟网络"
     copyright: "版权所有"
     admin: "后台"
