--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -192,11 +192,11 @@ zh:
     adv1t: "最专业的团队"
     adv1: "同舟平台拥有最优秀的管理团队、最资深的技术团队以及最有经验、素质的客服团队。"
     adv2t: "最严谨的操作"
-    adv2: "同舟平台严格控制交易的拍下、付款、发货、收货评价等真实流程进行操作，真实交易，万无一失！"
+    adv2: "同舟平台严格控制各种流程，提高客户服务水平，保证客户利益万无一失！"
     adv3t: "最贴心的服务"
     adv3: "平台一直 “以客户为先”为理念，急客户所急，将“服务”贯穿于平台运作和管理的每一个细节。"
     adv4t: "最强大的技术"
-    adv4: "最资深的淘宝研究团队和技术研发团队保证技术刷钻的安全！"
+    adv4: "最资深的电子商务研究团队和技术研发团队保证客户账户的安全！"
     adv5t: "最清新的风格"
     adv5: "无繁琐步骤，无隐性消费，无恶意操作，同舟力求做到最实在最优异，给您带来不一样的舒适平台！"
 
