--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -122,7 +122,7 @@ zh:
     cancel_account: "删除我的帐户"
     are_you_sure: "确定此操作?"
     news: "新闻"
-    site_update: "网站更新"
+    site_update: "网站动态"
     no_news: "暂无公告"
     no_topics: "没有新的话题"
     no_articles: "没有新的文章"
