--- a/config/locales/zh.yml
+++ b/config/locales/zh.yml
@@ -80,7 +80,7 @@ zh:
     ie: "您的IE浏览器版本太老,可能会严重影响浏览效果及账户安全,建议升级到ie8以上版本,或者使用火狐及谷歌浏览器"
     firefox: "Firefox下载"
     google: "谷歌下载"
-    name: "同舟网络"
+    name: "百应网络"
     copyright: "版权所有"
     admin: "后台"
     roles: "角色"
@@ -93,18 +93,18 @@ zh:
     login_tip1: "1. 注册后,请查收邮件,激活你的帐号以后才能登录"
     login_tip2: "2. 若输入用户名或密码无法登录,请检查用户名和密码是否输入正确"
     login_tip3: "3. 若忘记密码,请点击'忘记密码'链接找回您的密码"
-    sign_tip: "同舟网络服务使用协议"
-    sign_rule1: "1. 本服务协议为同舟网络服务公司与服务使用人（“用户”）之间的协议。用户注册后，用户应当对以其用户帐号进行的所有活动和事件负法律责任。"
-    sign_rule2: "2. 同舟网络有权随时修改本协议的任何条款，并在同舟网站公示，而无需另行单独通知用户。"
-    sign_rule3: "3. 用户需遵守平台规则中提到的所有条款。请参考同舟平台的规则说明。"
-    sign_rule4: "4. 保护用户隐私是同舟网络的一项基本政策，同舟网络保证不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在同舟网络的非公开内容。"
-    sign_rule5: "5. 用户明确同意由自身原因使用同舟网络服务产生问题，所造成的损失将完全由其自己承担；因其使用同舟网络服务而产生的一切后果也由其自己承担，同舟网络对用户不承担任何责任。"
+    sign_tip: "百应网络服务使用协议"
+    sign_rule1: "1. 本服务协议为百应网络服务公司与服务使用人（“用户”）之间的协议。用户注册后，用户应当对以其用户帐号进行的所有活动和事件负法律责任。"
+    sign_rule2: "2. 百应网络有权随时修改本协议的任何条款，并在百应网站公示，而无需另行单独通知用户。"
+    sign_rule3: "3. 用户需遵守平台规则中提到的所有条款。请参考百应平台的规则说明。"
+    sign_rule4: "4. 保护用户隐私是百应网络的一项基本政策，百应网络保证不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在百应网络的非公开内容。"
+    sign_rule5: "5. 用户明确同意由自身原因使用百应网络服务产生问题，所造成的损失将完全由其自己承担；因其使用百应网络服务而产生的一切后果也由其自己承担，百应网络对用户不承担任何责任。"
     label: "首页"
     welcome: "欢迎, %{name}"
     login: "登录"
     register: "注册"
     join_us: "加入我们 | 注册"
-    register_agree: "注册并同意同舟服务协议"
+    register_agree: "注册并同意百应服务协议"
     logout: "注销"
     profile: "帐户"
     login_name: "用户名"
@@ -187,21 +187,21 @@ zh:
     task_diamond: "钻石区"
     task_favourite: "收藏区"
     task_flow: "流量区"
-    intro_title: "同舟网络"
-    intro: "同舟网络旨在做您事业上的好伙伴，只要您有所呼应，我们必定随叫随到！随时随地尽心为您经营管理网店商务、贸易、买卖活动。为您提供从网上置业定位分析——互联网产品应用等一条龙的管理服务。"
-    intro1: "亲切、开放、严谨的企业文化和科学规范的管理，凝聚着大量的优秀人才，同舟网拥有由优秀的职业经理人组成的管理团队、由资深IT专员组成的技术团队以及最具丰富经验和专业素质的销售精英组成的客服团队，我们在技术开发、推广和维护方面默契合作深刻理解“以客户为先”的含义，将“服务”贯穿于平台运作和管理的每一个细节，赢得客户广泛的信任和支持。"
-    intro2: "高含量的技术支持，高素质的贴心服务，高质量的服务对象，相信我们的合作将会是强强联手！同舟网期待与您互联网事业相呼应，共同扬帆智慧之舟，共同抵达黄金海岸!"
+    intro_title: "百应网络"
+    intro: "百应网络旨在做您事业上的好伙伴，只要您有所呼应，我们必定随叫随到！随时随地尽心为您经营管理网店商务、贸易、买卖活动。为您提供从网上置业定位分析——互联网产品应用等一条龙的管理服务。"
+    intro1: "亲切、开放、严谨的企业文化和科学规范的管理，凝聚着大量的优秀人才，百应网拥有由优秀的职业经理人组成的管理团队、由资深IT专员组成的技术团队以及最具丰富经验和专业素质的销售精英组成的客服团队，我们在技术开发、推广和维护方面默契合作深刻理解“以客户为先”的含义，将“服务”贯穿于平台运作和管理的每一个细节，赢得客户广泛的信任和支持。"
+    intro2: "高含量的技术支持，高素质的贴心服务，高质量的服务对象，相信我们的合作将会是强强联手！百应网期待与您互联网事业相呼应，共同扬帆智慧之舟，共同抵达黄金海岸!"
     adv_title: "平台优势"
     adv1t: "最专业的团队"
-    adv1: "同舟平台拥有最优秀的管理团队、最资深的技术团队以及最有经验、素质的客服团队。"
+    adv1: "百应平台拥有最优秀的管理团队、最资深的技术团队以及最有经验、素质的客服团队。"
     adv2t: "最严谨的操作"
-    adv2: "同舟平台严格控制各种流程，提高客户服务水平，保证客户利益万无一失！"
+    adv2: "百应平台严格控制各种流程，提高客户服务水平，保证客户利益万无一失！"
     adv3t: "最贴心的服务"
     adv3: "平台一直 “以客户为先”为理念，急客户所急，将“服务”贯穿于平台运作和管理的每一个细节。"
     adv4t: "最强大的技术"
     adv4: "最资深的电子商务研究团队和技术研发团队保证客户账户的安全！"
     adv5t: "最清新的风格"
-    adv5: "无繁琐步骤，无隐性消费，无恶意操作，同舟力求做到最实在最优异，给您带来不一样的舒适平台！"
+    adv5: "无繁琐步骤，无隐性消费，无恶意操作，百应力求做到最实在最优异，给您带来不一样的舒适平台！"
 
   manage:
     message_box: "收件箱"
